Here's the commented version of the code:

```c++
#!/usr/bin/env ruby

# Copyright 2016 gRPC authors.

# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at

#     http://www.apache.org/licenses/LICENSE-2.0

# distributed under the License is distributed on an "AS IS" BASIS,

# See the License for the specific language governing permissions and
# limitations under the License.

# Load common end-to-end test utilities
require_relative './end2end_common'

# Main test function for testing SIGINT handling during channel watch
def main
  # Start the gRPC echo server
  STDERR.puts 'start server'
  echo_service = EchoServerImpl.new
  server_runner = ServerRunner.new(echo_service)
  server_port = server_runner.run
  
  # Start the test client that will perform channel watch operations
  STDERR.puts 'start client'
  client_controller = ClientController.new(
    'sig_int_during_channel_watch_client.rb', server_port)

  # Wait briefly to ensure client is running before sending signal
  sleep 1
  
  # Send SIGINT to client process to test interrupt handling during channel watch
  Process.kill('SIGINT', client_controller.client_pid)
  
  # Wait for client process to complete, with timeout
  begin
    Timeout.timeout(120) do
      Process.wait(client_controller.client_pid)
    end
  rescue Timeout::Error
    # Handle case where client freezes after SIGINT
    STDERR.puts "timeout wait for client pid #{client_controller.client_pid}"
    # Force kill the client if it didn't respond to SIGINT
    Process.kill('SIGKILL', client_controller.client_pid)
    Process.wait(client_controller.client_pid)
    STDERR.puts 'killed client child'
    raise 'Timed out waiting for client process. It likely freezes when a ' \
      'SIGINT is sent while there is an active connectivity_state call'
  end
  
  # Verify client exit status
  client_exit_code = $CHILD_STATUS
  if client_exit_code != 0
    fail "sig_int_during_channel_watch_client failed: #{client_exit_code}"
  end
  
  # Clean up server
  server_runner.stop
end

# Execute the test
main
```

Key aspects explained in the comments:
1. The overall purpose of the test (SIGINT handling during channel watch)
2. The server setup process
3. The client initialization and execution
4. The SIGINT test scenario and timeout handling
5. The exit code verification
6. Cleanup process

The comments provide context for each major operation while maintaining readability. They explain both what the code is doing and why (the testing scenario being implemented).