Here's the commented version of the code:

```c++
#!/usr/bin/env ruby

# Copyright 2016 gRPC authors.

# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at

#     http://www.apache.org/licenses/LICENSE-2.0

# distributed under the License is distributed on an "AS IS" BASIS,

# See the License for the specific language governing permissions and
# limitations under the License.

# Load common functionality for end-to-end tests
require_relative './end2end_common'

# Main execution method for the test scenario
def main
  # Start the gRPC echo server
  STDERR.puts 'start server'
  # Create a new instance of the EchoServer implementation
  echo_service = EchoServerImpl.new
  # Initialize server runner with the echo service
  server_runner = ServerRunner.new(echo_service)
  # Run the server and get the assigned port number
  server_port = server_runner.run
  
  # Start the gRPC client
  STDERR.puts 'start client'
  # Create a client controller that will manage the client process
  # The client script 'graceful_sig_stop_client.rb' will be executed
  client_controller = ClientController.new(
    './graceful_sig_stop_client.rb', server_port)
  
  # Send shutdown command to the client stub
  client_controller.stub.shutdown(ClientControl::Void.new)
  
  # Wait for the client process to terminate
  Process.wait(client_controller.client_pid)
  
  # Verify client exited successfully (exit code 0)
  # If not, raise an error with the exit status
  fail "client exit code: #{$CHILD_STATUS}" unless $CHILD_STATUS.to_i.zero?
  
  # Stop the server after client has finished
  server_runner.stop
end

# Execute the main function
main
```

Key aspects explained in the comments:
1. The overall structure and purpose of the test scenario
2. The server initialization and startup process
3. The client initialization and control mechanism
4. The shutdown sequence and error checking
5. The clean-up process for both client and server

The comments provide context for each major operation while maintaining readability of the actual code. They explain both what the code is doing and why, which is particularly important for test code that verifies system behavior.